p2/scripts/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
  labels:
    app: app-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
      - name: app-one
        image: signalsciences/example-helloworld:latest
        args:
        # Address for the app to listen on
        - localhost:app1.com
        ports:
        - containerPort: 30301
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
  labels:
    app: app-two
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
      - name: app-two
        image: signalsciences/example-helloworld:latest
        args:
        # Address for the app to listen on
        - localhost:app2.com
        ports:
        - containerPort: 30302
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
  labels:
    app: app-three
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
      - name: app-three
        image: signalsciences/example-helloworld:latest
        args:
        # Address for the app to listen on
        - localhost:app3.com
        ports:
        - containerPort: 30303
---
apiVersion: v1
kind: Service
metadata:
  name: app-one
  labels:
    app: app-one
spec:
  ports:
  - name: http
    port: 80
    targetPort: 30301
  selector:
    app: app-one
---
apiVersion: v1
kind: Service
metadata:
  name: app-two
  labels:
    app: app-two
spec:
  ports:
  - name: http
    port: 80
    targetPort: 30302
  selector:
    app: app-two
---
apiVersion: v1
kind: Service
metadata:
  name: app-three
  labels:
    app: app-three
spec:
  ports:
  - name: http
    port: 80
    targetPort: 30303
  selector:
    app: app-three
